[package]
name = "solomon"
version = "0.1.0"
authors = ["PoiScript <poiscript@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
imagesize = "0.6"
orgize = { git = "https://github.com/PoiScript/orgize" }
rss = "1.0"
serde= { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "1.0"
