[package]
name = "solomon"
version = "0.1.0"
authors = ["PoiScript <poiscript@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
chrono = { version = "0.4" }
imagesize = "0.7"
orgize = { git = "https://github.com/PoiScript/orgize" }
json = "0.11"
url = "1.0"
syntect = { version = "3.2", default-features = false, features = ["html", "dump-load"] }
lazy_static = "1.3.0"
