[package]
name = "solomon"
version = "0.1.0"
authors = ["PoiScript <poiscript@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
askama = "0.8"
chrono = "0.4"
html-minifier = "1.1"
imagesize = "0.7"
json = "0.11"
lazy_static = "1.3.0"
orgize = { git = "https://github.com/PoiScript/orgize" }
syntect = { version = "3.2", default-features = false, features = ["html", "dump-load", "yaml-load"] }
url = "1.0"
