[package]
name = "solomon"
version = "2.0.0"
authors = ["PoiScript <poiscript@gmail.com>"]
description = "PoiScript's Blog"
edition = "2018"
homepage = "https://blog.poi.cat"
license = "MIT"
publish = false
repository = "https://github.com/PoiScript/solomon"

[dependencies]
chrono = { version = "0.4.19", default-features = false, features = [
    "clock",
    "serde",
    "wasmbind",
] }
console_error_panic_hook = "0.1.7"
json = "0.12.4"
maud = "0.23.0"
serde = { version = "1.0.136", features = ["derive"] }
orgize = { version = "0.9.0", default-features = false }
wasm-bindgen = "0.2.79"
wasm-bindgen-futures = "0.4.29"
web-sys = { version = "0.3.56", features = [
    'console',
    'Request',
    'Response',
    'Window',
] }
wee_alloc = "0.4.5"
serde_json = "1.0.78"
cfg-if = "1.0.0"
js-sys = "0.3.56"
futures-util = "0.3.19"

[build-dependencies]
chrono = { version = "0.4.19", default-features = false, features = [
    "clock",
    "serde",
    "wasmbind",
] }

[features]
workers = []

[profile.release]
lto = true

[lib]
crate-type = ["cdylib", "rlib"]
